@@ -83,10 +83,6 @@
                 <filename>rescue.target</filename>,
                 <filename>initrd-root-fs.target</filename>,
                 <filename>rpcbind.target</filename>,
-                <filename>runlevel2.target</filename>,
-                <filename>runlevel3.target</filename>,
-                <filename>runlevel4.target</filename>,
-                <filename>runlevel5.target</filename>,
                 <filename>shutdown.target</filename>,
                 <filename>sigpwr.target</filename>,
                 <filename>sleep.target</filename>,
@@ -474,10 +470,6 @@
                                         <para>Applications wanting to
                                         power off the system should start
                                         this unit.</para>
-
-                                        <para><filename>runlevel0.target</filename>
-                                        is an alias for this target
-                                        unit, for compatibility with SysV.</para>
                                 </listitem>
                         </varlistentry>
                         <varlistentry>
@@ -489,10 +481,6 @@
                                         <para>Applications wanting to
                                         reboot the system should start
                                         this unit.</para>
-
-                                        <para><filename>runlevel6.target</filename>
-                                        is an alias for this target
-                                        unit, for compatibility with SysV.</para>
                                 </listitem>
                         </varlistentry>
                         <varlistentry>
@@ -519,10 +507,6 @@
                                         <para>A special target unit
                                         for setting up the base system
                                         and a rescue shell.</para>
-
-                                        <para><filename>runlevel1.target</filename>
-                                        is an alias for this target
-                                        unit, for compatibility with SysV.</para>
                                 </listitem>
                         </varlistentry>
                         <varlistentry>
@@ -537,25 +521,6 @@
                                         unit, which is generated from
                                         the kernel command line.
                                         </para>
-                                </listitem>
-                        </varlistentry>
-                        <varlistentry>
-                                <term><filename>runlevel2.target</filename></term>
-                                <term><filename>runlevel3.target</filename></term>
-                                <term><filename>runlevel4.target</filename></term>
-                                <term><filename>runlevel5.target</filename></term>
-                                <listitem>
-                                        <para>These are targets that
-                                        are called whenever the SysV
-                                        compatibility code asks for
-                                        runlevel 2, 3, 4, 5,
-                                        respectively. It is a good
-                                        idea to make this an alias for
-                                        (i.e. symlink to)
-                                        <filename>multi-user.target</filename>
-                                        (for runlevel 2) or
-                                        <filename>graphical.target</filename>
-                                        (the others).</para>
                                 </listitem>
                         </varlistentry>
                         <varlistentry>
