@@ -13,7 +13,6 @@ RequiresMountsFor=/var/log/wtmp
 Conflicts=shutdown.target
 Requisite=systemd-update-utmp.service
 After=systemd-update-utmp.service
-After=runlevel1.target runlevel2.target runlevel3.target runlevel4.target runlevel5.target
 Before=shutdown.target
 
 [Service]
